<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:splitMotionEvents="false"
    tools:context=".fragments.SelectFragment">
    <!--    メインの処理はここにViewはこの間に書く  -->

    <LinearLayout
        android:id="@+id/lines"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            tools:ignore="UselessLeaf">
        </LinearLayout>

        <!-- 検索ワード入力 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:text="@string/menu_keyword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" >

            <EditText
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:textSize="24sp"
                android:paddingStart="20dp"
                tools:ignore="Autofill,LabelFor,RtlSymmetry" />


        </LinearLayout>

        <!-- 半径 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:text="@string/menu_range" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_gray"
                android:id="@+id/menu_selector"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/menu_short"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_short"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/menu_middle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_middle"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/menu_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_large"
                    android:layout_weight="1" />

            </RadioGroup>

        </LinearLayout>

        <!-- 条件 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:text="@string/menu_condition" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.widget.ToggleButton
                android:id="@+id/menu_eat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textOff="@string/menu_eat_non"
                android:textOn="@string/menu_eat"
                tools:ignore="NestedWeights" />

            <android.widget.ToggleButton
                android:id="@+id/menu_drink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textOff="@string/menu_drink_non"
                android:textOn="@string/menu_drink" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.widget.ToggleButton
                android:id="@+id/menu_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textOff="@string/menu_private_non"
                android:textOn="@string/menu_private"
                tools:ignore="NestedWeights" />

            <android.widget.ToggleButton
                android:id="@+id/menu_smoking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textOff="@string/menu_smoking_non"
                android:textOn="@string/menu_smoking" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/menu_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="0dp"
                android:textSize="20sp"
                android:text="@string/menu_search" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            tools:ignore="UselessLeaf">
        </LinearLayout>



    </LinearLayout>

    <!--　　ここまで  -->

</androidx.constraintlayout.widget.ConstraintLayout>